<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2f5ff"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/tytul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tytuldochod"
        android:inputType="textPersonName"
        android:layout_marginTop="5sp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/opis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/opisdochod"
       	android:inputType="textMultiLine"
       	android:layout_marginTop="5sp"
        android:ems="10" />

    <EditText
        android:id="@+id/cena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cenadochod"
        android:layout_marginTop="5sp"
        android:inputType="numberDecimal" 
        android:ems="10" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/powiadomienie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powiadomienie" />

    <Button
        android:id="@+id/dodaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e2f5ff"
        android:background="#3bb9af"
        android:text="@string/dodaj" />

    <Button
        android:id="@+id/wrocd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e2f5ff"
        android:background="#3bb9af"
        android:text="@string/wrocd"  
        android:layout_marginTop="10sp" />

</LinearLayout>