<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2f5ff"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/tytul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tytuldochod"
        android:ems="10"
        android:layout_marginTop="30sp"
        android:inputType="textPersonName"
         >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/opis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/opisdochod"
        android:inputType="textMultiLine"
        android:layout_marginTop="10sp"
        android:ems="10" />

    <EditText
        android:id="@+id/cena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cenadochod"
        android:inputType="numberDecimal"
        android:layout_marginTop="10sp"
        android:ems="10" />

    <Button
        android:id="@+id/dodaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e2f5ff"
        android:background="#3bb9af"
        android:text="@string/dodaj"/>

    <Button
        android:id="@+id/wrocd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e2f5ff"
        android:background="#3bb9af"
        android:layout_marginTop="10sp"
        android:text="@string/wrocd" />

</LinearLayout>