<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e2f5ff"
    android:orientation="vertical"
    tools:context=".Rachunki" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rachunki"
        android:textSize="24sp" />

 <Button
        android:id="@+id/wroc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:background="#3bb9af"
        android:text="@string/wroc"
        android:textColor="#e2f5ff" />
    <Button
        android:id="@+id/dodaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:background="#3bb9af"
        android:text="@string/dodaj"
        android:textColor="#e2f5ff" />
       

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="265dp" >

        <ListView
            android:id="@+id/rachunekList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
        <ListView
            android:id="@+id/rachunekList2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
	</LinearLayout>
</LinearLayout>